[package]
name = "idiomize"
version = "0.1.0"
authors = ["Stuart Pernsteiner <spernsteiner@galois.com>"]
build = "build.rs"

[dependencies]
diff = "0.1.10"
log = "0.4"
env_logger = "0.4.3"
json = "0.11.8"
libc = "0.2.28"
getopts = "0.2.14"
regex = "0.2.2"
ena = "0.7.3"

# [target.'cfg(NOT_A_PLATFORM)'.dependencies]
# arena                 = {path = "compiler/src/libarena"}
# rustc                 = {path = "compiler/src/librustc"}
# rustc_data_structures = {path = "compiler/src/librustc_data_structures"}
# rustc_driver          = {path = "compiler/src/librustc_driver"}
# rustc_errors          = {path = "compiler/src/librustc_errors"}
# rustc_metadata        = {path = "compiler/src/librustc_metadata"}
# rustc_resolve         = {path = "compiler/src/librustc_resolve"}
# rustc_trans           = {path = "compiler/src/librustc_trans"}
# syntax                = {path = "compiler/src/libsyntax"}
# syntax_ext            = {path = "compiler/src/libsyntax_ext"}
# syntax_pos            = {path = "compiler/src/libsyntax_pos"}

[lib]
name = "idiomize"
path = "src/lib.rs"

[[bin]]
name = "idiomize"
doc = false
