[package]
name = "idiomize"
version = "0.1.0"
authors = ["Stuart Pernsteiner <spernsteiner@galois.com>"]
build = "build.rs"

[dependencies]
diff = "0.1.10"
log = "0.4"
env_logger = "0.4.3"
json = "0.11.8"
libc = "0.2.28"
getopts = "0.2.14"
regex = "0.2.2"
ena = "0.7.3"

[lib]
name = "idiomize"
path = "src/lib.rs"

[[bin]]
name = "idiomize"
doc = false
