[package]
name = "idiomize"
version = "0.1.0"
authors = ["Stuart Pernsteiner <spernsteiner@galois.com>"]
build = "build.rs"

[dependencies]
diff = "0.1.10"
json = "0.11.8"
libc = "0.2.28"
getopts = "0.2.14"
regex = "0.2.2"
ena = "0.7.3"
rust_ast_builder = { path = "../rust-ast-builder" }
cargo = "0.30.0"

[lib]
name = "idiomize"
path = "src/lib.rs"

[[bin]]
name = "idiomize"
doc = false
