[workspace]
members = [
    "analysis/runtime",
    "c2rust-analyze",
    "c2rust-macros",
    "c2rust-refactor",
    "dynamic_instrumentation",
    "pdg",
]
exclude = [
    "analysis/tests",
]

[workspace.package]
version = "0.21.0"
authors = ["The C2Rust Project Developers <c2rust@immunant.com>"]
edition = "2021"
rust-version = "1.65"
readme = "README.md"
homepage = "https://c2rust.com/"
repository = "https://github.com/immunant/c2rust/"
license = "BSD-3-Clause"
keywords = ["transpiler", "migration", "translation", "c"]
categories = ["development-tools", "development-tools::ffi", "command-line-utilities"]

[profile.dev.package."*"]
opt-level = 3
