[package]
name = "c2rust-analysis-plugin"
version = "0.1.0"
authors = ["The C2Rust Development Team <c2rust@immunant.com>",
           "Stephen Crane <sjc@immunant.com>"]
edition = "2018"

[lib]
plugin = true

[dependencies]
indexmap = "1.0.2"
c2rust-analysis-rt = { path = "../runtime" }
bincode = "1.0.1"
failure = "0.1"
