[package]
name = "c2rust-analysis-rt"
version = "0.1.0"
authors = ["The C2Rust Development Team <c2rust@immunant.com>",
           "Stephen Crane <sjc@immunant.com>"]
edition = "2021"

[lib]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3.3"
once_cell = "1"
enum_dispatch = "0.3"
fs-err = "2"
