[package]
name = "c2rust-analysis-rt"
version = "0.1.0"
authors = ["The C2Rust Development Team <c2rust@immunant.com>",
           "Stephen Crane <sjc@immunant.com>"]
edition = "2021"
description = "C2Rust runtime for recording dynamic analysis, targeted by c2rust-instrument and consumed by c2rust-pdg"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
bincode = "1.0.1"
once_cell = "1"
enum_dispatch = "0.3"
fs-err = "2"
