[package]
name = "c2rust-xcheck-pointer-tracer"
description = "Pointer dereference tracer (using ptrace) for C2Rust cross-checking"
version = "0.1.0"
authors = ["The C2Rust Project Developers <c2rust@immunant.com>"]
license = "BSD-3-Clause"
homepage = "https://c2rust.com/"
repository = "https://github.com/immunant/c2rust"
readme = "README.md"

[dependencies]
clap = "~2.32.0"
nix = "0.11.0"
spawn-ptrace = "0.1.1"
